--- a/slack.css
+++ b/slack.css
@@ -80,9 +80,9 @@ background-color: aquamarine;
     font-size: 1.3rem;
 }
 
-#last-section-img{
+/* #last-section-img{
     width: 90%;
-}
+} */
 
 .last-section{
     padding: 2em 1em; 
